--- a/JS/Practice1.html
+++ b/JS/Practice1.html
@@ -1,76 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        hr {
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
+      hr {
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
 
-        .button {
-            margin: 10px;
-            ;
-        }
+      .button {
+        margin: 10px;
+      }
     </style>
-    <script src="HashMap.js" defer>
-    </script>
+    <script src='HashMap.js' defer></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const map = new HashMap();
-            let valueInputText = document.getElementById('valueInput');
-            let keyInputText = document.getElementById('keyInput');
-            const putBtn = document.getElementById('putBtn');
-            const clearBtn = document.getElementById('clearBtn');
-            const resLabel = document.getElementById('resLabel');
+      document.addEventListener('DOMContentLoaded', function () {
+        const map = new HashMap();
+        let valueInputText = document.getElementById('valueInput');
+        let keyInputText = document.getElementById('keyInput');
+        const resLabel = document.getElementById('resLabel');
 
-            putBtn.addEventListener('click', function () {
-                keyInputTextStr = keyInputText.value.trim();
-                valueInputTextStr = valueInputText.value.trim();
-                if (keyInputTextStr === '') {
-                    alert('請輸入KEY值')
-                } 
-                else {
-                    if(map.contains(keyInputTextStr)){
-                     alert('Key already exists!');
-                     return;   
-                    }
-                    map.put(keyInputTextStr, valueInputTextStr);
-                    resLabel.innerText = map.keys()
+        document.getElementById('putBtn').addEventListener('click', function () {
+          keyInputTextStr = keyInputText.value.trim();
+          valueInputTextStr = valueInputText.value.trim();
+          if (!keyInputTextStr) {
+            alert('KEY值不能空白');
+            return;
+          }
 
-                }
-            });
-            clearBtn.addEventListener('click', function () {
-                map.clear();
-                resLabel.innerText = map.keys()
-            });
+          if (map.contains(keyInputTextStr)) {
+            alert('KEY值不能重複');
+            return;
+          }
+          let keyAndValue = '';
+          map.put(keyInputTextStr, valueInputTextStr);
+          for(let i = 0; i < map.keys().length; i++) {
+            keyAndValue += map.keys()[i] + ':' + map.get(map.keys()[i]) + '\n';
+          }
+          resLabel.innerText = keyAndValue;
         });
+        document.getElementById('clearBtn').addEventListener('click', function () {
+          map.clear();
+          resLabel.innerText = map.keys();
+          valueInputText.value = '';
+          keyInputText.value = '';
+        });
+      });
     </script>
-</head>
+  </head>
 
-<body>
+  <body>
     <form action="get">
-        <table>
-            <tr>
-                <td>KEY</td>
-                <th><input id="keyInput" type="text"></th>
-            </tr>
-            <tr>
-                <td>VALUE</td>
-                <th><input id="valueInput" type="text"></th>
-
-            </tr>
-        </table>
-        <hr>
-        <button id="putBtn" class="button" type="button">PUT</button>
-        <button id="clearBtn" class="button" type="button">CLEAR</button>
-        <hr>
+      <table>
+        <tr>
+          <td>KEY</td>
+          <th><input id="keyInput" type="text" /></th>
+        </tr>
+        <tr>
+          <td>VALUE</td>
+          <th><input id="valueInput" type="text" /></th>
+        </tr>
+      </table>
+      <hr />
+      <button id="putBtn" class="button" type="button">PUT</button>
+      <button id="clearBtn" class="button" type="button">CLEAR</button>
+      <hr />
     </form>
     <p>【RESULT】</p>
     <label id="resLabel" for=""></label>
-</body>
-
+  </body>
 </html>
