--- a/JS/Practice2.html
+++ b/JS/Practice2.html
@@ -1,161 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        td {
-            padding: 15px;
-        }
+      td {
+        padding: 15px;
+      }
     </style>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            function creatTd(value) {
-                const td = document.createElement('td');
-                td.innerText = value;
-                return td;
+      document.addEventListener('DOMContentLoaded', function () {
+        function creatTd(value) {
+          const td = document.createElement('td');
+          td.innerText = value;
+          return td;
+        }
+        function createRadio() {
+          const td = document.createElement('td');
+          const radio = document.createElement('input');
+          radio.style.border = '1px';
+          radio.setAttribute('type', 'radio');
+          radio.setAttribute('name', 'radio');
+          radio.setAttribute('class', 'radio');
+          td.appendChild(radio);
+          radio.addEventListener('change', function () {
+            const radioselect = document.getElementsByName('radio');
+            for (let i = 0; i < radioselect.length; i++) {
+              if (radioselect[i].checked) {
+                document.getElementById('manuFacture').value =
+                  radioselect[i].parentNode.parentNode.getElementsByTagName(
+                    'td'
+                  )[2].innerText;
+                document.getElementById('cateGory').value =
+                  radioselect[i].parentNode.parentNode.getElementsByTagName(
+                    'td'
+                  )[3].innerText;
+                document.getElementById('lowPrice').value =
+                  radioselect[i].parentNode.parentNode.getElementsByTagName(
+                    'td'
+                  )[4].innerText;
+                document.getElementById('price').value =
+                  radioselect[i].parentNode.parentNode.getElementsByTagName(
+                    'td'
+                  )[5].innerText;
+                break;
+              }
             }
-            function createRadio() {
-                const td = document.createElement('td');
-                const radio = document.createElement('input');
-                radio.style.border = '1px'
-                radio.setAttribute('type', 'radio');
-                radio.setAttribute('name', 'radio');
-                radio.setAttribute('class', 'radio');
-                td.appendChild(radio);
-                radio.addEventListener('change', function () {
-                    const radioselect = document.getElementsByName('radio');
-                    let manuFactures = document.getElementById('manuFacture').value;
-                    let cateGories = document.getElementById('cateGory').value;
-                    let lowPrices = document.getElementById('lowPrice').value;
-                    let prices = document.getElementById('price').value;
-                    for (let i = 0; i < radioselect.length; i++) {
-                        if (radioselect[i].checked) {
-                            document.getElementById('manuFacture').value = radioselect[i].parentNode.parentNode.getElementsByTagName('td')[2].innerText
-                            document.getElementById('cateGory').value = radioselect[i].parentNode.parentNode.getElementsByTagName('td')[3].innerText
-                            document.getElementById('lowPrice').value = radioselect[i].parentNode.parentNode.getElementsByTagName('td')[4].innerText
-                            document.getElementById('price').value = radioselect[i].parentNode.parentNode.getElementsByTagName('td')[5].innerText
-                            break;
-                        }
-                    }
-                });
-                return td;
+          });
+          return td;
+        }
+        function createDeleteBtn(tr) {
+          const td = document.createElement('td');
+          const btn = document.createElement('button');
+          btn.innerText = '刪除';
+          td.appendChild(btn);
+          btn.addEventListener('click', function () {
+            tr.remove();
+            const rows = document.getElementsByClassName('trClass');
+            for (let i = 0; i < rows.length; i++) {
+              rows[i].getElementsByTagName('td')[1].innerText = i + 1;
             }
-            function createDeleteBtn(tr) {
-                const td = document.createElement('td');
-                const btn = document.createElement('button');
-                btn.innerText = '刪除';
-                td.appendChild(btn)
-                btn.addEventListener('click', function () {
-                    tr.remove()
-                    const rows = document.getElementsByClassName('trClass')
-                    for (let i = 0; i < rows.length; i++) {
-                        rows[i].getElementsByTagName('td')[1].innerText = i + 1;
-                    }
-
-                });
-                return td;
-            }
-            function rowscount() {
-                const rows = document.getElementsByClassName('trClass')
-
-                return rows.length;
-            }
-            const addBtn = document.getElementById('addBtn');
-            const modBtn = document.getElementById('modBtn');
-            const clearBtn = document.getElementById('clearBtn');
-            const resTable = document.getElementById('resTable');
-            const resTableTr = document.getElementById('resTableTr');
-            addBtn.addEventListener('click', function () {                                  //加入資料
-                let manuFactures = document.getElementById('manuFacture').value.trim();
-                let cateGories = document.getElementById('cateGory').value.trim();
-                let lowPrices = document.getElementById('lowPrice').value;
-                let prices = document.getElementById('price').value;
-                if (manuFactures != '' && cateGories != '') {
-                    const radioButton = document.createElement('input');
-                    radioButton.setAttribute('type', 'radio');
-                    const newResult = document.createElement('tr')
-                    newResult.setAttribute('class', 'trClass')
-                    newResult.appendChild(createRadio())
-                    newResult.appendChild(creatTd(rowscount() + 1))
-                    newResult.appendChild(creatTd(manuFactures))
-                    newResult.appendChild(creatTd(cateGories))
-                    newResult.appendChild(creatTd(lowPrices))
-                    newResult.appendChild(creatTd(prices))
-                    newResult.appendChild(createDeleteBtn(newResult));
-                    resTable.appendChild(newResult);
-                } else {
-                    alert('請輸入至造商和類別')
-                }
-            })
-            clearBtn.addEventListener('click', function () {                                //清除資料
-                const trClass = document.getElementsByClassName('trClass');
-                while (trClass.length > 0) {
-                    trClass[0].remove();
-                }
-            })
-            modBtn.addEventListener('click', function () {
-                const radioselect = document.getElementsByName('radio');
-                let manuFactures = document.getElementById('manuFacture').value.trim();
-                let cateGories = document.getElementById('cateGory').value.trim();
-                let lowPrices = document.getElementById('lowPrice').value;
-                let prices = document.getElementById('price').value;
-                for (let i = 0; i < radioselect.length; i++) {
-                    if (radioselect[i].checked) {
-                        if (manuFactures != '' && cateGories != '') {
-                            radioselect[i].parentNode.parentNode.getElementsByTagName('td')[2].innerText = document.getElementById('manuFacture').value;
-                            radioselect[i].parentNode.parentNode.getElementsByTagName('td')[3].innerText = document.getElementById('cateGory').value;
-                            radioselect[i].parentNode.parentNode.getElementsByTagName('td')[4].innerText = document.getElementById('lowPrice').value;
-                            radioselect[i].parentNode.parentNode.getElementsByTagName('td')[5].innerText = document.getElementById('price').value;
-                            break;
-                        }
-                        else {
-                            alert('請輸入製造商和類別')
-                        }
-                    }
-                }
-            });
+          });
+          return td;
+        }
+        const addBtn = document.getElementById('addBtn');
+        const modBtn = document.getElementById('modBtn');
+        const clearBtn = document.getElementById('clearBtn');
+        const resTable = document.getElementById('resTable');
+        const resTableTr = document.getElementById('resTableTr');
+        addBtn.addEventListener('click', function () {
+          //加入資料
+          let manuFactures = document
+            .getElementById('manuFacture')
+            .value.trim();
+          let cateGories = document.getElementById('cateGory').value.trim();
+          let lowPrices = document.getElementById('lowPrice').value;
+          let prices = document.getElementById('price').value;
+          if (!manuFactures || !cateGories) {
+            alert('請輸入至造商和類別');
+            return;
+          }
+          const newResult = document.createElement('tr');
+          const rows = document.getElementsByClassName('trClass');
+          newResult.setAttribute('class', 'trClass');
+          newResult.appendChild(createRadio());
+          newResult.appendChild(creatTd(rows.length + 1));
+          newResult.appendChild(creatTd(manuFactures));
+          newResult.appendChild(creatTd(cateGories));
+          newResult.appendChild(creatTd(lowPrices));
+          newResult.appendChild(creatTd(prices));
+          newResult.appendChild(createDeleteBtn(newResult));
+          resTable.appendChild(newResult);
+          document.getElementById('manuFacture').value = '';
+          document.getElementById('cateGory').value = '';
+          document.getElementById('lowPrice').value = '';
+          document.getElementById('price').value = '';
         });
+        clearBtn.addEventListener('click', function () {
+          //清除資料
+          const trClass = document.getElementsByClassName('trClass');
+          document.getElementById('manuFacture').value = '';
+          document.getElementById('cateGory').value = '';
+          document.getElementById('lowPrice').value = '';
+          document.getElementById('price').value = '';
+          while (trClass.length > 0) {
+            trClass[0].remove();
+          }
+        });
+        modBtn.addEventListener('click', function () {
+          const radioselect = document.getElementsByName('radio');
+          let manuFactures = document
+            .getElementById('manuFacture')
+            .value.trim();
+          let cateGories = document.getElementById('cateGory').value.trim();
+          for (let i = 0; i < radioselect.length; i++) {
+            if (radioselect[i].checked) {
+              if (!manuFactures || !cateGories) {
+                alert('請輸入製造商和類別');
+                break;
+              } else {
+                radioselect[i].parentNode.parentNode.getElementsByTagName(
+                  'td'
+                )[2].innerText = document.getElementById('manuFacture').value;
+                radioselect[i].parentNode.parentNode.getElementsByTagName(
+                  'td'
+                )[3].innerText = document.getElementById('cateGory').value;
+                radioselect[i].parentNode.parentNode.getElementsByTagName(
+                  'td'
+                )[4].innerText = document.getElementById('lowPrice').value;
+                radioselect[i].parentNode.parentNode.getElementsByTagName(
+                  'td'
+                )[5].innerText = document.getElementById('price').value;
+              }
+              document.getElementById('manuFacture').value = '';
+              document.getElementById('cateGory').value = '';
+              document.getElementById('lowPrice').value = '';
+              document.getElementById('price').value = '';
+              radioselect.forEach((radio) => {
+                radio.checked = false;
+              });
+              break;
+            } else {
+              alert('請選擇要修改的項目');
+              break;
+            }
+          }
+        });
+      });
     </script>
-</head>
+  </head>
 
-<body>
+  <body>
     <form action="">
-        <table border="1" id="tableId" style="border-collapse:collapse;">
-            <tr>
-                <td>製造商</td>
-                <td><input value="" id="manuFacture" type="text"></td>
-                <td>類別</td>
-                <td><input value="" id="cateGory" type="text"></td>
-            </tr>
-            <tr>
-                <td>底價</td>
-                <td><input value="" id="lowPrice" type="text"></td>
-                <td>售價</td>
-                <td><input value="" id="price" type="text"></td>
-            </tr>
-            <tr>
-                <td colspan="4" style="text-align: center;">
-                    <button type="button" id="addBtn">新增</button>
-                    <button type="button" id="modBtn">修改</button>
-                    <button type="button" id="clearBtn">清空</button>
-                </td>
-            </tr>
-        </table>
-        <table id="resTable" border="1" style="margin-top: 20px; border-collapse: collapse;">
-            <tr>
-                <td></td>
-                <td>序號</td>
-                <td>製造商</td>
-                <td>類別</td>
-                <td>底價</td>
-                <td>售價</td>
-                <td></td>
-            </tr>
-        </table>
+      <table border="1" id="tableId" style="border-collapse: collapse">
+        <tr>
+          <td>製造商</td>
+          <td><input value="" id="manuFacture" type="text" /></td>
+          <td>類別</td>
+          <td><input value="" id="cateGory" type="text" /></td>
+        </tr>
+        <tr>
+          <td>底價</td>
+          <td><input value="" id="lowPrice" type="text" /></td>
+          <td>售價</td>
+          <td><input value="" id="price" type="text" /></td>
+        </tr>
+        <tr>
+          <td colspan="4" style="text-align: center">
+            <button type="button" id="addBtn">新增</button>
+            <button type="button" id="modBtn">修改</button>
+            <button type="button" id="clearBtn">清空</button>
+          </td>
+        </tr>
+      </table>
+      <table
+        id="resTable"
+        border="1"
+        style="margin-top: 20px; border-collapse: collapse"
+      >
+        <tr>
+          <td></td>
+          <td>序號</td>
+          <td>製造商</td>
+          <td>類別</td>
+          <td>底價</td>
+          <td>售價</td>
+          <td></td>
+        </tr>
+      </table>
     </form>
-</body>
-
+  </body>
 </html>
