--- a/JS/Practice1.html
+++ b/JS/Practice1.html
@@ -33,9 +33,9 @@
             alert('KEY值不能重複');
             return;
           }
-          
-          map.put(keyInputTextStr, valueInputText.value.trim());
-          resLabel.innerText += keyInputTextStr+ ':' + valueInputText.value.trim() + '\n';
+          let value = valueInputText.value.trim();
+          map.put(keyInputTextStr, value);
+          resLabel.innerText += keyInputTextStr+ ':' + value + '\n';
         });
         document.getElementById('clearBtn').addEventListener('click', function () {
           map.clear();
