--- a/JS/Practice2.html
+++ b/JS/Practice2.html
@@ -27,23 +27,13 @@
           radio.addEventListener('change', function () {
             const radioselect = document.getElementsByName('radio');
             for (let i = 0; i < radioselect.length; i++) {
+              let resTd =
+                radioselect[i].parentNode.parentNode.getElementsByTagName('td');
               if (radioselect[i].checked) {
-                document.getElementById('manuFacture').value =
-                  radioselect[i].parentNode.parentNode.getElementsByTagName(
-                    'td'
-                  )[2].innerText;
-                document.getElementById('cateGory').value =
-                  radioselect[i].parentNode.parentNode.getElementsByTagName(
-                    'td'
-                  )[3].innerText;
-                document.getElementById('lowPrice').value =
-                  radioselect[i].parentNode.parentNode.getElementsByTagName(
-                    'td'
-                  )[4].innerText;
-                document.getElementById('price').value =
-                  radioselect[i].parentNode.parentNode.getElementsByTagName(
-                    'td'
-                  )[5].innerText;
+                document.getElementById('manuFacture').value = resTd[2].innerText;
+                document.getElementById('cateGory').value = resTd[3].innerText;
+                document.getElementById('lowPrice').value = resTd[4].innerText;
+                document.getElementById('price').value = resTd[5].innerText;
                 break;
               }
             }
@@ -81,6 +71,7 @@
             alert('請輸入製造商和類別');
             return;
           }
+          let selectedRadio;
           const newResult = document.createElement('tr');
           const rows = document.getElementsByClassName('trClass');
           newResult.setAttribute('class', 'trClass');
@@ -96,6 +87,14 @@
           document.getElementById('cateGory').value = '';
           document.getElementById('lowPrice').value = '';
           document.getElementById('price').value = '';
+          const radioselect = document.getElementsByName('radio');
+          for (let i = 0; i < radioselect.length; i++) {
+            if (radioselect[i].checked) {
+              selectedRadio = radioselect[i];
+              break;
+            }
+          }
+          selectedRadio.checked = false;
         });
         clearBtn.addEventListener('click', function () {
           //清除資料
@@ -116,6 +115,7 @@
           let cateGories = document.getElementById('cateGory').value.trim();
           let selectedRadio;
           for (let i = 0; i < radioselect.length; i++) {
+            let resTd = selectedRadio.parentNode.parentNode.getElementsByTagName('td')
             if (radioselect[i].checked) {
               selectedRadio = radioselect[i];
               break;
@@ -129,18 +129,10 @@
             alert('請輸入製造商和類別');
             return;
           }
-          selectedRadio.parentNode.parentNode.getElementsByTagName(
-            'td'
-          )[2].innerText = document.getElementById('manuFacture').value;
-          selectedRadio.parentNode.parentNode.getElementsByTagName(
-            'td'
-          )[3].innerText = document.getElementById('cateGory').value;
-          selectedRadio.parentNode.parentNode.getElementsByTagName(
-            'td'
-          )[4].innerText = document.getElementById('lowPrice').value;
-          selectedRadio.parentNode.parentNode.getElementsByTagName(
-            'td'
-          )[5].innerText = document.getElementById('price').value;
+          resTd[2].innerText = document.getElementById('manuFacture').value;
+          resTd[3].innerText = document.getElementById('cateGory').value;
+          resTd[4].innerText = document.getElementById('lowPrice').value;
+          resTd[5].innerText = document.getElementById('price').value;
           document.getElementById('manuFacture').value = '';
           document.getElementById('cateGory').value = '';
           document.getElementById('lowPrice').value = '';
