--- a/JS/Practice2.html
+++ b/JS/Practice2.html
@@ -91,11 +91,10 @@
           const radioselect = document.getElementsByName('radio');
           for (let i = 0; i < radioselect.length; i++) {
             if (radioselect[i].checked) {
-              selectedRadio = radioselect[i];
+              radioselect[i].checked = false;
               break;
             }
           }
-          selectedRadio.checked = false;
         });
         clearBtn.addEventListener('click', function () {
           //清除資料
@@ -116,8 +115,6 @@
           let cateGories = document.getElementById('cateGory').value.trim();
           let selectedRadio;
           for (let i = 0; i < radioselect.length; i++) {
-            let resTd =
-              selectedRadio.parentNode.parentNode.getElementsByTagName('td');
             if (radioselect[i].checked) {
               selectedRadio = radioselect[i];
               break;
@@ -131,6 +128,8 @@
             alert('請輸入製造商和類別');
             return;
           }
+          let resTd =
+            selectedRadio.parentNode.parentNode.getElementsByTagName('td');
           resTd[2].innerText = document.getElementById('manuFacture').value;
           resTd[3].innerText = document.getElementById('cateGory').value;
           resTd[4].innerText = document.getElementById('lowPrice').value;
